Fix alignment error on button and add min number to party input. Comment row for future input alignment fix.

--- a/src/content/css/app.css
+++ b/src/content/css/app.css
@@ -27,10 +27,14 @@ body {
 #waitList
 ************/
 
-/* #waitList styles*/
+/* ab-party-form */
 
 .party-form {
     margin-bottom: 20px;
+}
+
+.party-align {
+	vertical-align: top;
 }
 
 /***********
